--- a/package.json
+++ b/package.json
@@ -5,21 +5,16 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-builder build --linux",
-    "postinstall": "electron-builder install-app-deps",
-    "rebuild": "electron-rebuild -f -w sqlite3",
-    "package-linux": "electron-packager . TZWMusic --overwrite --asar=true --platform=linux --arch=x64 --icon=icon/icon.png --prune=true --out=builds",
-    "build-deb": "electron-installer-debian --src builds/TZWMusic-linux-x64/ --arch amd64 --config debian.json"
+    "build-linux": "electron-builder build --linux ",
+    "build-win": "electron-builder build --win ",
+    "postinstall": "electron-builder install-app-deps"
   },
   "keywords": [],
-  "author": "",
+  "author": "Than<thainzawwin2016@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "electron": "^7.1.12",
-    "electron-builder": "^21.2.0",
-    "electron-installer-debian": "^3.0.0",
-    "electron-packager": "^14.2.1",
-    "electron-rebuild": "^1.10.0"
+    "electron-builder": "^21.2.0"
   },
   "dependencies": {
     "ffmetadata": "^1.6.0",
@@ -28,7 +23,19 @@
   "build": {
     "linux": {
       "target": [
-        "AppImage"
+        "deb"
+      ],
+      "category": "Audio",
+      "icon": "icon/icon.png"
+    },
+    "win": {
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "ia32"
+          ]
+        }
       ]
     }
   }
