--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "TZWMusic",
+  "name": "TZW-Music",
+  "homepage":"https://github.com/Than-coder",
   "version": "1.3.0",
   "description": "TZW Music Player Developed By Than",
   "main": "main.js",
@@ -26,18 +27,18 @@
         "deb"
       ],
       "category": "Audio",
-      "icon": "icon/icon.png"
+      "icon": "icon/linux/256x256.png"
     },
-    "win": {
-      "target": [
+    "win":{
+      "target":[
         {
-          "target": "nsis",
-          "arch": [
-            "ia32"
+          "target":"nsis",
+          "arch":[
+          "ia32"
           ]
         }
       ],
-      "icon":"icon/icon.ico"
+      "icon":"icon/win/icon.ico"
     }
   }
 }
